--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_layers_black_48dp"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -41,7 +41,7 @@
             android:label="Clases"
             android:parentActivityName=".activity.Clases" />
         <activity
-            android:name=".activity.MainClases"
+            android:name=".activity.MainEstudiantes"
             android:label="Clase: "
             android:parentActivityName=".activity.Main" />
         <activity
@@ -57,7 +57,11 @@
         <activity
             android:name=".activity.EditAcreditable"
             android:label="Editar Acreditable" />
-        <activity android:name=".activity.Calendarios"></activity>
+        <activity android:name=".activity.Calendarios" />
+        <activity
+            android:name=".activity.MainNotas"
+            android:label="@string/title_activity_main_notas_nav"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
