--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".activity.Main"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -57,12 +57,16 @@
         <activity
             android:name=".activity.EditAcreditable"
             android:label="Editar Acreditable" />
-        <activity android:name=".activity.Calendarios" />
+        <activity android:name=".activity.Calendarios" android:label="Calendario" />
         <activity
             android:name=".activity.MainNotas"
-            android:label="@string/title_activity_main_notas_nav"
+            android:label="@string/title_activity_main_notas"
             android:theme="@style/AppTheme.NoActionBar" />
-
+        <activity android:name=".activity.Parciales" />
+        <activity
+            android:name=".activity.EditParcial"
+            android:label="@string/title_activity_edit_parcial"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
