--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,6 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -40,14 +39,7 @@
             android:name=".activity.EditClase"
             android:label="Clases"
             android:parentActivityName=".activity.Clases" />
-        <activity
-            android:name=".activity.MainEstudiantes"
-            android:label="Clase: "
-            android:parentActivityName=".activity.Main" />
-        <activity
-            android:name=".activity.EditEstudiante"
-            android:label="Editar estudiante" />
-        <activity android:name=".activity.Asistancias" />
+
         <activity
             android:name=".activity.Acreditables"
             android:label="Acreditables" />
@@ -59,7 +51,7 @@
             android:label="Editar Acreditable" />
         <activity android:name=".activity.Calendarios" android:label="Calendario" />
         <activity
-            android:name=".activity.MainNotas"
+            android:name=".activity.MainClase"
             android:label="@string/title_activity_main_notas"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activity.Parciales" />
@@ -67,6 +59,9 @@
             android:name=".activity.EditParcial"
             android:label="@string/title_activity_edit_parcial"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".activity.EditEstudiante"
+            android:label="Editar estudiante"></activity>
     </application>
 
 </manifest>
